Modifico url base en archivo config - Modifico el primer post

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://rpalaciosg.netlify.com/"
+baseURL = "https://www.richardpalaciosg.dev/"
 languageCode = "en-us"
 title = "Richard Palacios G."
 theme = "hello-friend-ng"
