--- a/config.toml
+++ b/config.toml
@@ -83,15 +83,15 @@ enableEmoji     = true
 [menu]
   [[menu.main]]
     identifier = "about"
-    name       = "About"
+    name       = "/About"
     url        = "/about"
   [[menu.main]]
     identifier = "posts"
-    name       = "Blog"
+    name       = "/Blog"
     url        = "/posts"
   [[menu.main]]
     identifier = "projects"
-    name = "Projects"
+    name = "/Projects"
     url = "/projects"
 
 # Goldmark
