feat(config): update menu name About to About-me

--- a/config.toml
+++ b/config.toml
@@ -84,7 +84,7 @@ enableEmoji     = true
 [menu]
   [[menu.main]]
     identifier = "about"
-    name       = "/About"
+    name       = "/About-me"
     url        = "/about"
   [[menu.main]]
     identifier = "posts"
