feat(theme): change default theme to light

--- a/config.toml
+++ b/config.toml
@@ -38,12 +38,12 @@ enableEmoji     = true
   homeSubtitle = "Web Developer"
 
   # Toggle this option need to rebuild SCSS, requires extended version of Hugo
-  justifyContent = false  # Set "text-align: justify" to .content.
+  justifyContent = true  # Set "text-align: justify" to .content.
   
   # Directory name of your blog content (default is `content/posts`)
   contentTypeName = "posts"
   # Default theme "light" or "dark"
-  defaultTheme = "dark"
+  defaultTheme = "light"
 
 [languages]
   [languages.en]
