chore(config.toml): update disqus shortname

--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ rssLimit  = 10  # Maximum number of items in the RSS feed.
 copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message 
 
 # googleAnalytics = ""
-disqusShortname = "rpalaciosg"
+disqusShortname = "richardpalaciosg"
 enableEmoji     = true
 
 [permalinks]
