--- a/config.toml
+++ b/config.toml
@@ -37,8 +37,30 @@ enableEmoji     = true
 
   homeSubtitle = "FullStack Software Engineer"
 
+  # Global language menu
+  #
+  # Enables the global language menu.
+  #
+  enableGlobalLanguageMenu = true
+
   # Toggle this option need to rebuild SCSS, requires extended version of Hugo
-  justifyContent = true  # Set "text-align: justify" to .content.
+  justifyContent = false  # Set "text-align: justify" to .content.
+
+   # Custom footer 
+  # If you want, you can easily override the default footer with your own content. 
+  #
+  [params.footer]
+    trademark = 2024
+    rss = true
+    copyright = true
+    author = true
+
+    topText = []
+    bottomText = [
+      "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
+      #"Made with &#10084; by <a href=\"https://github.com/rhazdon\">Djordje Atlialp</a>"
+       "&#10084; <a href=\"https://themes.gohugo.io/themes/hugo-theme-hello-friend-ng/">hello-friend-ng</a>"
+    ]
   
   # Directory name of your blog content (default is `content/posts`)
   contentTypeName = "posts"
@@ -49,9 +71,16 @@ enableEmoji     = true
   [languages.en]
     title = "⚡Richard Palacios García"
     subtitle = "FullStack Software Engineer"
-    keywords = "Web Developer - Richard Palacios, Richard Palacios Garcia, javascript, ecuador, portfolio, web development, fullstack, homepage, blog, dev, development, programming, software engineer"
+    keywords = "FullStack, Web Developer - Richard Palacios, Richard Palacios Garcia, javascript, ecuador, portfolio, web development, fullstack, homepage, blog, dev, development, programming, software engineer"
     copyright = ""
     readOtherPosts = "Lee otras publicaciones"
+
+  # Colors for favicons
+  #
+  #[params.favicon.color]
+   # mask = "#1b1c1d"
+    #msapplication = "#1b1c1d"
+    #theme = "#1b1c1d"
 
 [params.logo]
     logoText = "rpalaciosg"
@@ -85,8 +114,6 @@ enableEmoji     = true
 #  [[params.social]]
 #    name = "stackoverflow"
 #    url  = "https://www.stackoverflow.com/"
-
-
 
 
 # And you can even create generic menu
