--- a/config.toml
+++ b/config.toml
@@ -59,7 +59,7 @@ enableEmoji     = true
     bottomText = [
       "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
       #"Made with &#10084; by <a href=\"https://github.com/rhazdon\">Djordje Atlialp</a>"
-       "&#10084; <a href=\"https://themes.gohugo.io/themes/hugo-theme-hello-friend-ng/">hello-friend-ng</a>"
+       "&#10084; <a href=\"https://themes.gohugo.io/themes/hugo-theme-hello-friend-ng\">hello-friend-ng</a>"
     ]
   
   # Directory name of your blog content (default is `content/posts`)
