--- a/config.toml
+++ b/config.toml
@@ -52,13 +52,12 @@ enableEmoji     = true
   [params.footer]
     trademark = 2024
     rss = true
-    copyright = true
+    copyright = false
     author = true
 
     topText = []
     bottomText = [
       "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
-      #"Made with &#10084; by <a href=\"https://github.com/rhazdon\">Djordje Atlialp</a>"
        "&#10084; <a href=\"https://themes.gohugo.io/themes/hugo-theme-hello-friend-ng\">hello-friend-ng</a>"
     ]
   
@@ -72,15 +71,9 @@ enableEmoji     = true
     title = "⚡Richard Palacios García"
     subtitle = "FullStack Software Engineer"
     keywords = "FullStack, Web Developer - Richard Palacios, Richard Palacios Garcia, javascript, ecuador, portfolio, web development, fullstack, homepage, blog, dev, development, programming, software engineer"
-    copyright = ""
+    #copyright = ""
     readOtherPosts = "Lee otras publicaciones"
 
-  # Colors for favicons
-  #
-  #[params.favicon.color]
-   # mask = "#1b1c1d"
-    #msapplication = "#1b1c1d"
-    #theme = "#1b1c1d"
 
 [params.logo]
     logoText = "rpalaciosg"
@@ -106,6 +99,10 @@ enableEmoji     = true
   [[params.social]]
     name = "linkedin"
     url  = "https://www.linkedin.com/in/richardpalaciosgarcia/"
+
+    [[params.social]]
+    name = "hashnode"
+    url  = "hhttps://blog.richardpalacios.dev/"
 
 #  [[params.social]]
 #    name = "Hackerrank"
